# anime-dl

./: .gitignore  LICENSE  README.md  anime-dl.py  get_links.py  main.py  pyproject.toml  requirements.txt
anime_dl/: main.py
anime_dl/scraper/: __init__.py
scraper/: __init__.py
tests/: test_anime_dl.py
